Fix hero text spacing

--- a/site/src/styles/about/_hero.scss
+++ b/site/src/styles/about/_hero.scss
@@ -30,8 +30,8 @@
   font-size: 3.9vw;
   text-transform: uppercase;
   color: #fff;
-  letter-spacing: ps2em(315);
-  margin-bottom: 25px;
+  letter-spacing: ps2em(230);
+  padding: 2.3%;
   opacity: 1;
 }
 
